app/assets/stylesheets/_site.scss
/* ... */
.favicon-unread {
	background-size: 16px 16px;
	background-repeat: no-repeat;
	background-image: image-url("favicon-unread.svg");
}

.favicon-all {
	background-size: 16px 16px;
	background-repeat: no-repeat;
	background-image: image-url("favicon-all.svg");
}

.favicon-star {
	background-size: 16px 16px;
	background-repeat: no-repeat;
	background-image: image-url("favicon-star.svg");
}

.back-button {
	background-color: transparent;
	background-size: 11px 18px;
	background-repeat: no-repeat;
	background-image: image-url("icon-left-arrow.svg");
	background-position: center center;
	display: block;
	-webkit-appearance: none;
	border: none;
	height: 16px;
	width: 11px;
	padding: 0;
}

.entries-wrap {
	position: relative;
	border-right: 1px solid $list-border;
	@media (max-width: 768px) {
		.feed-selected &, .nothing-selected & {
			border-right-style: none;
		}
	}
}

.entries-header {
	color: #999;
	display: none;
	border-bottom: 1px solid #CCC;
	line-height: 36px;
	height: 36px;
	text-align: center;
	overflow: auto;
	padding-right: 45px;
	> * {
		display: inline-block;
	}
	.back-button {
		float: left;
		height: 36px;
		width: 36px;
	}
	.favicon-wrap {
		position: static;
	}
	.favicon {
		margin-top: 4px;
	}
	@media (max-width: 420px) {
		.feed-selected & {
			display: block;
		}
	}
	@media (max-width: 768px) and (min-width: 621px) {
		.entry-selected & {
			display: block;
		}
	}
}

.entries {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	overflow-y: auto;
	overflow-x: hidden;
	-webkit-overflow-scrolling: touch;
	ul {
		margin: 0 0 0 0;
		padding: 0 0 17px 0;
		list-style: none;
		li {
			position: relative;
			word-wrap: break-word;
			background-color: #666;
			.favicon-wrap {
				top: 21px;
				left: 7px;
			}
			a {
				text-decoration: none;
			}
			.wrap {
				border-bottom: 1px solid #CCC;
				position: relative;
				background-color: #FFF;
				display: block;
				padding: 8px 10px 8px 31px;
				color: #000;
				left: 0;
				transition:left .3s ease;
				&:hover {
					text-decoration: none;
				}
			}
			.entry-actions {
				cursor: pointer;
				position: absolute;
				top: 10px;
				right: 11px;
				height: 12px;
				width: 12px;
				background: image-url("icon-gear.svg") no-repeat;
				background-size: 12px 12px;
				display: none;
			}
			.time {
				font-size: 12px;
				color: #999;
				margin-bottom: 1px;
				display: block;
			}
			.title {
				font-weight: bold;
				margin: 0;
				font-size: 14px;
				line-height: 1.1;
				display: block;
				margin-bottom: 4px;
			}
			.feed-title {
				font-size: 12px;
				line-height: 1.3;
				margin: 0 0 3px 0;
				color: #666;
			}
			.body {
				line-height: 1.3;
				font-size: 12px;
				margin: 0;
				color: #999;
				display: block;
			}
			.icon-star {
				background: image-url("icon-star.svg") 0 0 no-repeat;
				height: 10px;
				width: 11px;
				position: absolute;
				right: 11px;
				top: 11px;
				display: none;
			}
			&.starred {
				.icon-star {
					display: block;
				}
			}
			&.read {
				.title {
					color: #999;
				}
				.body, .feed-title {
					color: #CCC;
				}
			}
			&.selected {
				.wrap {
					border-color: #666;
					border-top: 1px solid #666;
					margin-top: -1px;
					background: #666666;
				}
				.icon-star {
					background-position: 0 -10px;
				}
				.time {
					color: rgba(255,255,255, .8) !important;
				}
				.title {
					color: rgba(255,255,255, 1) !important;
				}
				.feed-title {
					color: rgba(255,255,255, .8) !important;
				}
				.body {
					color: rgba(255,255,255, .5) !important;
				}
			}
			.selected &.selected {
				.wrap {
					border-color: $selected;
					border-top: 1px solid $selected;
					background: $selected;
				}
			}
			&:hover {
				.entry-actions {
					display: block;
				}
				.icon-star {
					display: none;
				}
			}
			&.show-actions {
				a {
					left: -70%;
				}
			}
			.mark-above-read,
			.mark-below-read {
				position: absolute;
				height: 50%;
				color: #FFF;
				width: 100%;
				text-align: right;
				cursor: pointer;
				&:hover {
					background-color: #999;
				}
				span {
					font-size: 12px;
					display: block;
					height: 12px;
					overflow: auto;
					margin: auto;
					position: absolute;
					top: 0;
					left: 0;
					bottom: 0;
					right: 8px;
					line-height: 1;
				}
				i {
					font-style: normal;
				}
				i:before {
					font-style: normal;
					content: "↑";
					padding-right: 4px;
					font-weight: bold;
				}
			}
			.mark-below-read {
				bottom: 0;
				border-top: 1px solid rgba(255,255,255,.5);
				i:before {
					content: "↓";
					top: -2px;
				}
			}
		}
	}
	@media (max-width: 420px) {
		top: 36px; /* entries header */
		bottom: 51px; /* feeds-toolbar */
	}
	@media (max-width: 768px) {
		.entry-selected & {
			top: 36px;
		}
	}
}

.entry-toolbar {
	background-color: #FFF;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 36px;
	border-bottom: 1px solid #CCC;
	.back-button {
		height: 36px;
		width: 36px;
	}
	.favicon-wrap {
		top: 8px;
		left: 13px;
	}
	.entry-feed-title {
		position: absolute;
		top: 10px;
		left: 38px;
		display: block;
		font-size: 14px;
		color: #999999;
		text-decoration: none;
	}
	@media (min-width: 621px) {
		.back-button {
			display: none;
		}
	}
	@media (max-width: 768px) {
		.favicon-wrap, .entry-feed-title {
			display: none;
		}
	}
}

.entry-settings-wrap {
	position: absolute;
	top: 37px;
	left: 0;
	width: 100%;
}
/* ... */

